[package]
name = "esme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9"
bevy_egui = "0.18"				# For the interface
bevy-inspector-egui = "0.15"
bevy_prototype_lyon = "0.7.1"	# For drawing shapes
uom = { git = "https://github.com/iliekturtles/uom" }
egui-gizmo = { git = "https://github.com/urholaukkarinen/egui-gizmo" }
