[package]
name = "esme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10"
bevy_egui = "0.20"				# For the interface
bevy-inspector-egui = "0.18"
uom = { git = "https://github.com/iliekturtles/uom" }
